<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/nav_host_fragment_activity_main"
        android:name="androidx.navigation.fragment.NavHostFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:defaultNavHost="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/search_bar"
        app:layout_constraintVertical_bias="1.0"
        app:navGraph="@navigation/mobile_navigation"/>

    <androidx.appcompat.widget.SearchView
        android:id="@+id/search_bar"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="@color/design_default_color_background"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toLeftOf="@id/visualize_button"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/filter_view"
        app:layout_constraintTop_toBottomOf="@id/search_bar"
        app:layout_constraintLeft_toLeftOf="parent"
        android:background="@color/design_default_color_background"
        android:padding="20dp"
        android:visibility="gone">
        <TextView
            android:id="@+id/button_close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/x"
            android:textSize="25sp"
            android:background="@color/design_default_color_background"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
        <TextView
            android:id="@+id/heading_filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/heading_filter"
            android:textSize="25sp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>
        <TextView
            android:id="@+id/topic_filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@android:drawable/editbox_background"
            android:drawablePadding="24dp"
            android:hint="@string/filter_hint"
            android:padding="12dp"
            android:text="@string/filter"
            app:layout_constraintTop_toBottomOf="@id/heading_filter"
            app:layout_constraintLeft_toLeftOf="parent"
            app:drawableEndCompat="@android:drawable/arrow_down_float" />
        <TextView
            android:id="@+id/source_filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@android:drawable/editbox_background"
            android:drawablePadding="24dp"
            android:hint="@string/filter_hint_source"
            android:padding="12dp"
            android:text="@string/filter_source"
            app:layout_constraintTop_toBottomOf="@id/heading_filter"
            app:layout_constraintRight_toRightOf="parent"
            app:drawableEndCompat="@android:drawable/arrow_down_float"/>
        <Button
            android:id="@+id/button_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/button_search"
            app:layout_constraintTop_toBottomOf="@id/source_filter"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/share_button"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_margin="20dp"
        android:background="@drawable/rounded_button"
        android:foreground="@drawable/share_button"
        android:foregroundGravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:ignore="UnusedAttribute" />

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/visualize_button"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:background="@color/design_default_color_primary"
        android:foreground="@drawable/visualize_button"
        android:foregroundGravity="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:ignore="UnusedAttribute" />

</androidx.constraintlayout.widget.ConstraintLayout>